# APEIRON-X

./: .gitignore  .test.aux  Cargo.toml  PROGRESS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  test.glob  test.vo
.cargo/: config.toml
artifacts/: .gitkeep
compiler/: Cargo.toml
compiler/src/: main.rs
compiler/src/codegen/: mod.rs
compiler/src/ir/: mod.rs
compiler/src/packager/: mod.rs
compiler/src/parser/: ast.rs  grammar.rs  lexer.rs  mod.rs
compiler/src/safety/: mod.rs
compiler/src/semantic/: mod.rs
compiler/src/typechecker/: mod.rs
docs/API-spec/: README.md
docs/HPM-spec/: README.md  hpm-dl.md
frontend/: next.config.js  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
infra/docker/: Dockerfile.compiler  Dockerfile.runtime  Dockerfile.solver
infra/kubernetes/: runtime-deployment.yaml  solver-daemonset.yaml
runtime/: Cargo.toml  build.rs
runtime/proto/: runtime.proto
runtime/src/: main.rs
runtime/src/grpc_api/: mod.rs
runtime/src/monitoring/: mod.rs
runtime/src/orchestrator/: mod.rs
runtime/src/sandbox/: mod.rs
runtime/src/scheduler/: mod.rs
solver/: CMakeLists.txt
solver/bindings/: python_bindings.cpp
solver/include/apeiron_solver/: tensor_engine.h  topology_engine.h  transfinite_engine.h
solver/src/gpu_kernels/: evolution.cu  tensor_ops.cu  truncation.cu
solver/src/tensor_engine/: mps.cpp  peps.cpp  tdvp.cpp  tebd.cpp  tensor_engine.cpp
solver/src/topology_engine/: betti.cpp  cohomology.cpp
solver/src/transfinite_engine/: transfinite.cpp
