[workspace]
members = [
    "compiler",
    "runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["APEIRON-X Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.10"
tonic-build = "0.10"
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cbor = "0.5"
rmp-serde = "1.1"

# Parsing
nom = "7.1"
pest = "2.7"
pest_derive = "2.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Storage
s3 = "0.33"
minio = "0.1"

# Math
nalgebra = "0.32"

