[package]
name = "apeiron-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_cbor.workspace = true
rmp-serde.workspace = true
nom.workspace = true
pest.workspace = true
pest_derive.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
nalgebra.workspace = true
clap.workspace = true

# Compiler-specific dependencies
logos = "0.13"
lalrpop = "0.20"
codespan = "0.11"
codespan-reporting = "0.11"

[[bin]]
name = "apeiron-compiler"
path = "src/main.rs"

